<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_and_register_page_grey"
    android:padding="@dimen/default_16dp">

    <ImageButton
        android:id="@+id/image_button_back_arrow_in_register_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/text_view_new_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/image_button_back_arrow_in_register_two"
        app:layout_constraintTop_toTopOf="@id/image_button_back_arrow_in_register_two"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/text_view_stepTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_2_nsteps"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/text_view_new_account"
        app:layout_constraintTop_toTopOf="@id/text_view_new_account"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:text="@string/uppercase_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_view_new_account"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/text_view_new_account"
        app:layout_constraintTop_toBottomOf="@id/text_view_new_account"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.23" />


    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/myTextInputLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_view_password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_view_password"
        app:layout_constraintTop_toBottomOf="@id/text_view_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.75"
        tools:text="@string/kevin" />

    <TextView
        android:id="@+id/text_view_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_view_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4" />


    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/myTextInputLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_view_confirm_password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_view_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/text_view_confirm_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.75"
        tools:text="@string/kevin" />


    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_for_login_page_login_button"
        android:elevation="8dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:theme="@style/NextAndSignUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_text_confirm_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_confirm_password"
        app:layout_constraintVertical_bias="0.4"/>


</androidx.constraintlayout.widget.ConstraintLayout>