<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_share_profile_white"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/text_view_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_16dp"
        android:background="@drawable/bg_for_share_fragment"
        android:elevation="5dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="@id/text_view_profile"
        app:layout_constraintTop_toBottomOf="@id/text_view_profile"
        app:layout_constraintVertical_bias="1">


        <TextView
            android:id="@+id/text_view_name_in_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"
            tools:text="@string/kevinarleo" />

        <ImageButton
            android:id="@+id/image_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit_2"
            app:layout_constraintBottom_toBottomOf="@id/text_view_name_in_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_name_in_profile" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_profile_image_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/image_button_edit"
            app:layout_constraintStart_toStartOf="@id/text_view_name_in_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:id="@+id/image_view_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:background="@drawable/bruce_wayne" />


        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/text_view_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_orange"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/card_profile_image_container"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/text_view_name_in_profile"
            app:layout_constraintTop_toBottomOf="@id/text_view_name_in_profile"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.45"
            tools:text="@string/kevin_capital" />

        <TextView
            android:id="@+id/text_view_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_view_full_name"
            app:layout_constraintTop_toBottomOf="@id/text_view_full_name"
            app:layout_constraintVertical_bias="0.05" />


        <TextView
            android:id="@+id/text_view_bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_view_bio"
            app:layout_constraintTop_toBottomOf="@id/text_view_bio"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>