<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_and_register_page_grey"
    android:padding="@dimen/default_16dp">

    <ImageButton
        android:id="@+id/image_button_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/text_view_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@id/image_button_back_arrow"
        app:layout_constraintTop_toBottomOf="@id/image_button_back_arrow"
        app:layout_constraintVertical_bias="0.1" />


    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="@string/e_mail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingVertical="20dp"
        android:singleLine="true"
        android:textColor="@color/person_text_orange"
        android:theme="@style/myTextInputLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_view_log_in"
        app:layout_constraintTop_toBottomOf="@id/text_view_log_in"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.8" />


    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingVertical="20dp"
        android:singleLine="true"
        android:textColor="@color/person_text_orange"
        android:theme="@style/myTextInputLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_text_username"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/edit_text_username"
        app:layout_constraintTop_toBottomOf="@id/edit_text_username"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/button_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_for_login_page_login_button"
        android:elevation="8dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:theme="@style/NextAndSignUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/text_view_first_time_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_16dp"
        android:text="@string/first_time_here"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_login_button"
        app:layout_constraintStart_toStartOf="@id/button_login_button"
        app:layout_constraintTop_toBottomOf="@id/button_login_button"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>