<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_share_profile_white"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/text_view_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_16dp"
        android:background="@drawable/bg_for_share_fragment"
        android:elevation="5dp"
        android:paddingTop="@dimen/default_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="@id/text_view_share"
        app:layout_constraintTop_toBottomOf="@id/text_view_share"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/card_profile_image_container"
            app:layout_constraintEnd_toStartOf="@id/card_profile_image_container"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_profile_image_container"
            tools:text="kevinarleo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_profile_image_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.1">

            <ImageView
                android:id="@+id/image_view_profile_in_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:background="@drawable/bruce_wayne" />


        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/text_view_passed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_16dp"
            android:textColor="@color/time_grey"
            app:layout_constraintBottom_toBottomOf="@id/card_profile_image_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/card_profile_image_container"
            app:layout_constraintTop_toTopOf="@id/card_profile_image_container"
            tools:text="5 m" />

        <ImageView
            android:id="@+id/image_view_cropped_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/share_grey"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1.9:1"
            app:layout_constraintTop_toBottomOf="@id/card_profile_image_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTextInputLayout"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/image_view_cropped_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/text_view_allow_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_16dp"
            android:text="@string/allow_coments"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/messageTextInputLayout"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@id/messageTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/messageTextInputLayout"
            app:layout_constraintVertical_bias="0.04" />

        <Switch
            android:id="@+id/switch_comment_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="55dp"
            android:theme="@style/SwitchStyle"
            app:layout_constraintEnd_toEndOf="@id/messageTextInputLayout"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@id/text_view_allow_comments"
            app:layout_constraintTop_toTopOf="@id/text_view_allow_comments" />

        <Button
            android:id="@+id/button_share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_for_share_button"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:theme="@style/orangeButtonTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/messageTextInputLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/text_view_allow_comments"
            app:layout_constraintTop_toBottomOf="@id/switch_comment_switch"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.333"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>